# cassandra

./: .gitmodules
cad-cassandra/: 61302021821.stp  cassandra.20260418-071938.FCBak  cassandra.FCStd
code-cassandra/cassandra/: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  cassandra.ioc  compile_commands.json  toolchain-arm-none-eabi.cmake
code-cassandra/cassandra/Core/Inc/: FreeRTOSConfig.h  can.h  impl_display.h  main.h  state.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tool.h
code-cassandra/cassandra/Core/Src/: can.c  dma.c  freertos.c  gpio.c  impl_buttons.c  impl_display.c  main.c  rtc.c  sdio.c  spi.c  state.c  stm32f4xx_it.c  tim.c  usart.c
code-cassandra/cassandra/USB_DEVICE/App/: usbd_desc.c
code-cassandra/cassandra/buildscripts/: debug.sh  debug_ros2.sh  debug_stm32.sh  release.sh  release_ros2.sh  release_stm32.sh
kicad-cassandra/: can.kicad_sch  cassandra.kicad_sym  debugger.kicad_sch  display.kicad_sch  fp-lib-table  kicad-cassandra.kicad_pcb  kicad-cassandra.kicad_pro  kicad-cassandra.kicad_sch  research.md  sdcard.kicad_sch  sym-lib-table  usb.kicad_sch
kicad-cassandra/3d/: 210112013.stp  450302014072.stp  691805010302.stp  SOIC-8_ME_MCH.step  STLinkConnection.step
kicad-cassandra/bom/: ibom.html
kicad-cassandra/kicad-cassandra.pretty/: 430162073826.kicad_mod  450302014072.kicad_mod  693071010811.kicad_mod  831024589.kicad_mod  CONN4_05010302_WRE.kicad_mod  L_CommonModeChoke_Coilcraft_1812CAN.kicad_mod  SOIC-8_ME_MCH-L.kicad_mod  ST_Link_Connection.kicad_mod  USB_C_Receptacle_Palconn_UTC16-G.kicad_mod  WE-D-SUB_THT90_EC_210112013.kicad_mod  WL-SMSW_0603_ROUND.kicad_mod  microSD_HC_Wuerth_693072010801.kicad_mod
kicad-cassandra/the.funnies.pretty/: no_hand.kicad_mod  tuev_blau.kicad_mod
